Added damage, checkpoint, and finish

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,7 @@ if (CMAKE_SYSTEM_NAME STREQUAL Emscripten)
         COMMAND ${CMAKE_COMMAND} -E echo "copying ${PROJECT_NAME}.html to index.html"
         COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.html ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/index.html
         COMMAND ${CMAKE_COMMAND} -E echo "packaging files to zip"
-        COMMAND cd "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}" && ${CMAKE_COMMAND} -E tar "cfv" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/itch_package.zip" --format=zip -- "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/index.html" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.js" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.wasm" && cd ..
+        COMMAND cd "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}" && ${CMAKE_COMMAND} -E tar "cfv" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/itch_package.zip" --format=zip -- "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/index.html" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.js" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.wasm" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.data" && cd ..
         COMMAND ${CMAKE_COMMAND} -E echo "deleting index.html after packaging"
         COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/index.html
     )
