--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -1,5 +1,8 @@
 # This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
+- name: Install ninja-build tool
+uses: seanmiddleditch/gha-setup-ninja@v5
+
 name: CMake on a single platform
 
 on:
