--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -21,10 +21,9 @@ jobs:
       uses: mymindstorm/setup-emsdk@v14
       with:
         version: 3.1.64
-        actions-cache-folder: 'emsdk-cache'
 
     - name: Configure CMake
-      run: cmake -G Ninja -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=D:/a/CAT_TOWER/CAT_TOWER/emsdk-cache/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake
+      run: cmake -G Ninja -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
