Working map that doesn't disappear

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,10 @@
         "algorithm": "cpp",
         "condition_variable": "cpp",
         "fstream": "cpp",
-        "*.m": "cpp"
+        "*.m": "cpp",
+        "future": "cpp",
+        "list": "cpp",
+        "set": "cpp",
+        "unordered_set": "cpp"
     }
 }
